Issue #302 addressed. flexbox. height: max-content; align-items: center; white-space: pre; flexbox button height: 100%

--- a/css/sample-style-borderless.css
+++ b/css/sample-style-borderless.css
@@ -131,7 +131,13 @@ html, body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        white-space: pre
+        height: max-content;
+        align-items: center;
+        white-space: pre; 
+}
+
+.flexboxRow button {
+        height: 100%
 }
 
 .flexboxColumn {
@@ -146,6 +152,11 @@ html, body {
 
 .marginRightWide {
         margin-right: 3em;
+}
+
+.marginTopNone {
+        /* to keep checkbox contol buttons the same size */
+        margin-top: 0;
 }
 
 .marginTopNarrow {
