--- a/css/sample-style-borders.css
+++ b/css/sample-style-borders.css
@@ -143,7 +143,13 @@ html, body {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        white-space: pre
+        height: max-content;
+        align-items: center;
+        white-space: pre;
+}
+
+.flexboxRow button {
+        height: 100%
 }
 
 .flexboxColumn {
@@ -158,6 +164,11 @@ html, body {
 
 .marginRightWide {
         margin-right: 3em;
+}
+
+.marginTopNone {
+        /* to keep checkbox contol buttons the same size */
+        margin-top: 0;
 }
 
 .marginTopNarrow {
